--- a/publications/patents/index.html
+++ b/publications/patents/index.html
@@ -239,8 +239,10 @@ var LS_Meta = {"v":"6.0.6"};
             			<div class="container_inner default_template_holder clearfix page_container_inner" >
 																<div class='q_list circle circle_number'></p>
 <ul>
+<li>Radovanovic, Pavle “Material, system and method making use of plasmon resonance” <i>U.S. Patent Application</i><br />
+ (Publication No. US 201762534893), (issued on May 27 2021)</li>
 <li>Radovanovic, Pavle “Light Emitting Materials and Systems and Method for Production Thereof” <i>U.S. Patent Application</i><br />
- (Publication No. US 20160102841), pending</li>
+ (Publication No. US 20160102841), (issued on March 10 2020)</li>
 <li>Radovanovic, Pavle; Wang, Ting “Light Emitting Material and Method for Production Thereof” United States Patent 9,676,996 (issued on June 13, 2017)</li>
 </ul>
 <p></div>
