--- a/people/group-alumni/index.html
+++ b/people/group-alumni/index.html
@@ -245,6 +245,7 @@ var LS_Meta = {"v":"6.0.6"};
 <p>&nbsp;</p>
 <div class='q_list circle circle_number'></p>
 <ul>
+<li>Khue Nguyen</li>
 <li>Victor Galievsky</li>
 <li>Josh Byers (Assistant Professor, Department of Chemistry, University of Quebec at Montreal)</li>
 <li>Baran Yildirim (Visiting Researcher, University of New South Wales, Canberra, Australia)</li>
