--- a/applications/index.html
+++ b/applications/index.html
@@ -310,6 +310,25 @@ emitting nanostructures (NanoLite).</p>
 			<p>Our recent results on phase-and-defect-dependent electronic structure and properties of transparent metal oxide nanocrystals led to the development of photocatalysts for efficient air and water treatment.</p>
 
 		</div> 
+		
+		
+	<div   data-q_id="#portfolio"    class="vc_row wpb_row section vc_row-fluid  grid_section" style='background-color:#f8f8f8; border-bottom: 1px solid #eeeeee; padding-top:80px; padding-bottom:0px; text-align:left;'><div class=" section_inner clearfix"><div class='section_inner_margin clearfix'><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner "><div class="wpb_wrapper"><div      class="vc_row wpb_row section vc_row-fluid vc_inner " style=' text-align:left;'><div class=" full_section_inner clearfix"><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner "><div class="wpb_wrapper">
+	<div class="wpb_text_column wpb_content_element ">
+		<div class="wpb_wrapper">
+			<h2 style="text-align: left;">MAGNETOPLASMONICS</h2>
+
+		</div> 
+	</div> <div class="separator  small left  " style="margin-top: 13px;margin-bottom: 33px;background-color: #818181;"></div>
+
+	<div class="wpb_text_column wpb_content_element ">
+		<div class="wpb_wrapper">
+			<p>The interaction between a plasmon and electronic or spin states in complex nanostructured systems has emerged as one of the fascinating topics that intertwines the fields of photonics, optoelectronics, and spintronics. Our interest in degenerately-doped semiconductor nanocrystals has largely been motivated by the potential for realizing and controlling exciton polarization induced by cyclotron motion of free charge carriers.</p>
+
+		</div> 
+	</div> <div class="separator  transparent   " style="margin-top: 79px;margin-bottom: 0px;"></div>
+</div></div></div>
+			
+		
 	</div> <div class="separator  transparent   " style="margin-top: 79px;margin-bottom: 0px;"></div>
 </div></div></div></div></div></div></div></div></div></div></div>
 														 
