--- a/fundamental-research/index.html
+++ b/fundamental-research/index.html
@@ -309,14 +309,14 @@ phase stabilization and the mechanism of phase transformation of nanostructures 
 </div></div></div><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner "><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
-			<h2 style="text-align: left;">Unconventional metal oxide plasmonic nanostructures</h2>
+			<h2 style="text-align: left;">PLASMONIC SEMICONDUCTOR NANOSTRUCTURES</h2>
 
 		</div> 
 	</div> <div class="separator  small left  " style="margin-top: 13px;margin-bottom: 33px;background-color: #818181;"></div>
 
 	<div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
-			<p>Native defect sites in transparent metal oxides (TMOs) are implicated in their electrical conductivity, rendering colloidal TMO nanocrystals promising building blocks for multifunctional optoelectronic structures and devices. Our focus in this area is to understand the electronic structure, and manipulate the optical and electrical properties of different types of plasmonic metal oxide nanocrystals.</p>
+			<p>Degenerately doped semiconductor nanocrystals are promising building blocks for multifunctional optoelectronic structures and devices. Our focus in this area is to understand the electronic structure of different types of plasmonic semiconductor nanocrystals and manipulate their optical and electrical properties. We are also developing new applications of plasmonic semiconductor nanocrystals based on the correlation between plasmonic and semiconducting properties.</p>
 
 		</div> 
 	</div> <div class="separator  transparent   " style="margin-top: 79px;margin-bottom: 0px;"></div>
