--- a/fundamental-research/index.html
+++ b/fundamental-research/index.html
@@ -240,8 +240,7 @@ var LS_Meta = {"v":"6.0.6"};
 																<div      class="vc_row wpb_row section vc_row-fluid " style=' text-align:left;'><div class=" full_section_inner clearfix"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner "><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
-			<p>The overall theme of our research program is understanding fundamental principles governing the coexistence of and correlations among different properties in complex nanostructured materials, which are often considered to be mutually exclusive. Simultaneous control of multiple functionalities at the nanoscale could lead to radically new approaches to energy conversion, and sustainable energy-efficient information technologies, photonics, and catalysis.</p>
-<p>We apply interdisciplinary approach to investigate multifunctionality at the nanoscale, and the application of multifunctional nanostructures for energy-efficient and sustainable technologies.</p>
+			<p>The overall theme of our research program is understanding fundamental principles governing the coexistence of and correlations among different properties in complex nanostructured materials, which are often considered to be mutually exclusive. Simultaneous control of multiple functionalities at the nanoscale could lead to radically new approaches to energy conversion, and sustainable energy-efficient information technologies, photonics, and catalysis. We apply interdisciplinary approach to investigate multifunctionality at the nanoscale, and the application of multifunctional nanostructures for energy-efficient and sustainable technologies.</p>
 <p>&nbsp;</p>
 
 		</div> 
@@ -263,9 +262,7 @@ var LS_Meta = {"v":"6.0.6"};
 
 	<div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
-			<p>Native defects are often a source of unusual properties in solid state materials. The control of the type and concentration of native defects in colloidal nanocrystals is poorly understood, due in part to their small volumes, and the difficulty in controlling the defect formation in a solution environment. In this avenue of my research program we use a variety of spectroscopic<br />
-techniques and theoretical modelling to understand the behavior of point defects in reduced<br />
-dimensions.</p>
+			<p>Native defects are often a source of unusual properties in solid state materials. The control of the type and concentration of native defects in colloidal nanocrystals is poorly understood, due in part to their small volumes, and the difficulty in controlling the defect formation in a solution environment. In this avenue of my research program we use a variety of spectroscopic techniques and theoretical modelling to understand the behavior of point defects in reduced dimensions.</p>
 
 		</div> 
 	</div> <div class="separator  transparent   " style="margin-top: 79px;margin-bottom: 0px;"></div>
