--- a/people/group-alumni/index.html
+++ b/people/group-alumni/index.html
@@ -245,7 +245,6 @@ var LS_Meta = {"v":"6.0.6"};
 <p>&nbsp;</p>
 <div class='q_list circle circle_number'></p>
 <ul>
-<li>Khue Nguyen</li>
 <li>Victor Galievsky</li>
 <li>Josh Byers (Assistant Professor, Department of Chemistry, University of Quebec at Montreal)</li>
 <li>Baran Yildirim (Visiting Researcher, University of New South Wales, Canberra, Australia)</li>
@@ -259,6 +258,7 @@ var LS_Meta = {"v":"6.0.6"};
 <p>&nbsp;</p>
 <div class='q_list circle circle_number'></p>
 <ul>
+<li>Khue Nguyen, M.Sc.</li>
 <li>Penghui Yin, Ph.D.</li>
 <li>Paul Stanish, Ph.D.</li>
 <li>Natalie Garnet, Ph.D.</li>
@@ -302,6 +302,7 @@ var LS_Meta = {"v":"6.0.6"};
 <p>&nbsp;</p>
 <div class='q_list circle circle_number'></p>
 <ul>
+<li><span style="font-weight: 400;">Milena Gojsevic</span></li>
 <li><span style="font-weight: 400;">Feng Zhao</span></li>
 <li><span style="font-weight: 400;">Yi Tan</span></li>
 <li><span style="font-weight: 400;">Yi Pan</span></li>
