--- a/applications/index.html
+++ b/applications/index.html
@@ -160,7 +160,7 @@ var LS_Meta = {"v":"6.0.6"};
 </ul></div></div>
 </li>
 <li id="nav-menu-item-96" class="menu-item menu-item-type-post_type menu-item-object-page  narrow"><a href="../facilities/index.html" class=""><i class="menu_icon blank fa"></i><span>Facilities</span><span class="plus"></span></a></li>
-<li id="nav-menu-item-91" class="menu-item menu-item-type-post_type menu-item-object-page  narrow"><a href="../press/index.html" class=""><i class="menu_icon blank fa"></i><span>Press</span><span class="plus"></span></a></li>
+<li id="nav-menu-item-91" class="menu-item menu-item-type-post_type menu-item-object-page  narrow"><a href="../press/index.html" class=""><i class="menu_icon blank fa"></i><span>News/Press</span><span class="plus"></span></a></li>
 <li id="nav-menu-item-92" class="menu-item menu-item-type-post_type menu-item-object-page  narrow"><a href="../outreach/index.html" class=""><i class="menu_icon blank fa"></i><span>Outreach</span><span class="plus"></span></a></li>
 <li id="nav-menu-item-93" class="menu-item menu-item-type-post_type menu-item-object-page  narrow"><a href="../contact-us/index.html" class=""><i class="menu_icon blank fa"></i><span>Contact Us</span><span class="plus"></span></a></li>
 </ul>						</nav>
@@ -194,7 +194,7 @@ var LS_Meta = {"v":"6.0.6"};
 </ul>
 </li>
 <li id="mobile-menu-item-96" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="../facilities/index.html" class=""><span>Facilities</span></a><span class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span></li>
-<li id="mobile-menu-item-91" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="../press/index.html" class=""><span>Press</span></a><span class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span></li>
+<li id="mobile-menu-item-91" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="../press/index.html" class=""><span>News/Press</span></a><span class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span></li>
 <li id="mobile-menu-item-92" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="../outreach/index.html" class=""><span>Outreach</span></a><span class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span></li>
 <li id="mobile-menu-item-93" class="menu-item menu-item-type-post_type menu-item-object-page "><a href="../contact-us/index.html" class=""><span>Contact Us</span></a><span class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span></li>
 </ul>					</nav>
