--- a/publications/index.html
+++ b/publications/index.html
@@ -240,9 +240,18 @@ var LS_Meta = {"v":"6.0.6"};
 																
 	<div class="wpb_tabstabs_holder clearfix" data-interval="0">
 		<div class="q_tabs vertical left">
-			<ul class="tabs-nav"><li><a href="#tab-008">2021</a></li><li><a href="#tab-009">2020</a></li><li><a href="#tab-010">2019</a></li><li><a href="#tab-011">2018</a></li><li><a href="#tab-012">2017</a></li><li><a href="#tab-013">2016</a></li><li><a href="#tab-014">2015</a></li><li><a href="#tab-015">2014</a></li><li><a href="#tab-016">2013</a></li><li><a href="#tab-017">2012</a></li><li><a href="#tab-018">2011</a></li><li><a href="#tab-019">2007-2010</a></li><li><a href="#tab-020">2001-2006</a></li></ul>
+			<ul class="tabs-nav"><li><a href="#tab-007">2022</a></li><li><a href="#tab-008">2021</a></li><li><a href="#tab-009">2020</a></li><li><a href="#tab-010">2019</a></li><li><a href="#tab-011">2018</a></li><li><a href="#tab-012">2017</a></li><li><a href="#tab-013">2016</a></li><li><a href="#tab-014">2015</a></li><li><a href="#tab-015">2014</a></li><li><a href="#tab-016">2013</a></li><li><a href="#tab-017">2012</a></li><li><a href="#tab-018">2011</a></li><li><a href="#tab-019">2007-2010</a></li><li><a href="#tab-020">2001-2006</a></li></ul>
 <div class='tabs-container'>
 			<br />
+	
+	<div id="tab-007" class="tab-content">
+				<br />
+
+<p> Placeholder - New papers up soon </p>
+<hr />
+
+
+			</div> <br />
 	
 				<div id="tab-008" class="tab-content">
 				<br />
