--- a/people/group-alumni/index.html
+++ b/people/group-alumni/index.html
@@ -245,10 +245,10 @@ var LS_Meta = {"v":"6.0.6"};
 <p>&nbsp;</p>
 <div class='q_list circle circle_number'></p>
 <ul>
-<li>Victor Galievsky</li>
+<li>Victor Galievsky (Scientist II at Insitro, San Francisco, CA, USA)</li>
 <li>Josh Byers (Assistant Professor, Department of Chemistry, University of Quebec at Montreal)</li>
 <li>Baran Yildirim (Visiting Researcher, University of New South Wales, Canberra, Australia)</li>
-<li>Arunasish Layek (Postdoctoral Fellow, KU Leuven)</li>
+<li>Arunasish Layek (Assistant Professor, Department of Chemistry, Adamas University, Kolkata, India)</li>
 <li>Ian Hosein (Assistant Professor, Department of Biomedical and Chemical Engineering, Syracuse University)</li>
 <li>Vladimir Blagojevic (Research Scientist, Institute of Technical Sciences of the Serbian Academy of Sciences, Serbia)</li>
 </ul>
@@ -258,29 +258,32 @@ var LS_Meta = {"v":"6.0.6"};
 <p>&nbsp;</p>
 <div class='q_list circle circle_number'></p>
 <ul>
-<li>Khue Nguyen, M.Sc.</li>
-<li>Penghui Yin, Ph.D.</li>
-<li>Paul Stanish, Ph.D.</li>
-<li>Natalie Garnet, Ph.D.</li>
+
+<li>Penghui Yin, Ph.D. (Assistant Professor, Department of Chemistry, Anhui University, China)</li>
+<li>Paul Stanish, Ph.D. (Risk Analyst at Risk Sciences International, Ottawa)</li>
+<li>Mahdieh Ghobadifard, visiting Ph.D. (Postdoctoral Fellow, University of Kurdistan, Sanandaj, Iran)</li>
+<li>Vahid Ghodsi, Ph.D. (Postdoctoral Associate, Department of Chemistry, University of Colorado, Boulder, CA).</li>
+<li>Manu Hegde, Ph.D. (Research Scientist at American Air Liquide, Inc., Newark, DE)</li>
+<li>Ting Wang, Ph.D. (Associate Professor, National Engineering Research Center for Colloidal Materials, Shandong University, China)</li>
+<li>Hongyu Wu, visiting Ph.D. (Senior Patent Agent, Patent Office of People’s Republic of China, Beijing, China)</li>
+<li>Shokouh Farvid, Ph.D. (Senior Scientist, Advanced Sterilization Products, Irvine, CA, USA)</li>
+
 <li>Nathaniel Smith, M.Sc.</li>
 <li>Shuoyuan Chen, M.Sc.</li>
 <li>Yi Tan, M.Sc.</li>
 <li>Chenwei Zhang, M.Sc.</li>
+<li>Khue Nguyen, M.Sc.</li>
 <li>Wenhuan Lu, M.Sc.</li>
 <li>Enas Howsawi, M.Sc.</li>
 <li>Yunyan Wang, M.Sc.</li>
 <li>Susi Jin, M.Sc.</li>
-<li>Vahid Ghodsi, Ph.D.</li>
 <li>Hanbing Fang, M.Sc. (Ph.D. Student, ETH Zurich)</li>
-<li>Manu Hegde, Ph.D. (Postdoctoral Fellow, Simon Fraser University)</li>
 <li>Brian Fernandes, M.Sc. (Curriculum designer, Maplesoft, Waterloo, ON)</li>
 <li>Lisa Hutfluss, M.Sc. (Georgia Pacific, Atlanta, GA)</li>
 <li>Vadim Chirmanov, M.Sc.</li>
 <li>Tahereh Sabergharesou, M.Sc. (Ph.D. Student, Electrical and Computer Engineering, University of Waterloo)</li>
-<li>Ting Wang, Ph.D. (Associate Professor, Shandong University)</li>
-<li>Hongyu Wu, visiting Ph.D. (Senior Patent Agent, Patent Office of People’s Republic of China, Beijing)</li>
 <li>Melanie Chiu, M.Sc. (‎Quality Control Chemist, Toronto Research Chemicals, Toronto, ON)</li>
-<li>Shokouh Farvid, Ph.D. (Senior Scientist, Advanced Sterilization Products (Johnson and Johnson), Irvine, CA)</li>
+
 <li>Ling Ju, M.Sc. (Ph.D. Candidate, Materials Science and Engineering Department, Lehigh University)</li>
 </ul>
 <p></div>
